--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.47",
     "eslint-config-mourner": "^2.0.3",
+    "graceful-fs": "^4.1.11",
     "material-icons": "^0.2.3",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
