--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "squadmc",
   "description": "The map-based mortar calculator for Squad",
-  "version": "0.1.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.47",
     "eslint-config-mourner": "^2.0.3",
+    "git-revision-webpack-plugin": "^3.0.3",
     "graceful-fs": "^4.1.11",
     "material-icons": "^0.2.3",
     "raven-js": "^3.25.2",
